<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@drawable/ic_notices"
            android:title="@string/menu_notices" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_my_messages" />
        <item
            android:id="@+id/nav_messages_teacher"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/ic_homework"
            android:title="@string/menu_my_homework" />
        <item
            android:id="@+id/nav_homework_teacher"
            android:icon="@drawable/ic_homework"
            android:title="@string/menu_homework" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_menu_marks"
            android:title="@string/menu_my_marks" />
        <item
            android:id="@+id/nav_marks_teacher"
            android:icon="@drawable/ic_menu_marks"
            android:title="@string/menu_marks" />
        <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_drive"
            android:title="@string/menu_my_drive" />
        <item
            android:id="@+id/nav_drive_teacher"
            android:icon="@drawable/ic_drive"
            android:title="@string/menu_drive" />
    </group>
</menu>
