<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.marks.MarksFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMarks_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editMarks_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_marks_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMarks_input_layout_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editMarks_input_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_marks_points"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMarks_input_layout_maxpoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editMarks_input_maxpoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_marks_maxpoints"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMarks_input_layout_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editMarks_input_details"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:ems="10"
                    android:hint="@string/hint_marks_details"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="113dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_edit_marks"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_edit"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_cancel_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_cancel" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>