<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addHomework.AddHomeworkFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editHomework_input_layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editHomework_input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_homework_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editHomework_input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editHomework_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:ems="10"
                    android:hint="@string/hint_homework_description"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editHomework_input_layout_fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/editHomework_input_fileName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:ems="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="113dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_upload_file"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_upload"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                    <Button
                        android:id="@+id/btn_add_homework"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_add"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_cancel_homework"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_cancel" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>