<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notices.NoticesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="317dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editNotice_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/text_receipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:ems="10"
                    android:textSize="20sp"
                    android:text="@string/text_receipt" />
            </com.google.android.material.textfield.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="113dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_delete"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_delete"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_cancel_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/button_cancel" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>